--- a/06_dom/dom.html
+++ b/06_dom/dom.html
@@ -11,7 +11,7 @@
         <h1 id = "title" class = "title">Dom Elements in JavaScript <span style = "display : none;">this is test span</span> </h1>
         <p>Lorem ipsum dolor sit amet.</p>
 
-        <h2 id = "t2" class="t2"> Trying query selector PART 1</h1>
+        <h2 id = "t2" class="t2"> Trying query selector PART 1</h1> //To check how querySelector works in dom
         <h2 id = "t3" class="t3"> Trying query selector PART 2</h1>
         <h2 id = "t3" class="t3"> Trying query selector PART 3</h1>
     </div>
