childnodes with dom

--- a/06_dom/domNodes_creation.html
+++ b/06_dom/domNodes_creation.html
@@ -53,7 +53,7 @@
 
     console.log(firstDay.nextElementSibling); // mtlb bhai to obvious si bat hai monday ka bhai tuesday and hame firstday use kia jo ki monday- bhai hai
 
-    console.log("Nodes :",parentDiv.childNodes);
+    console.log("Nodes :",parentDiv.childNodes); // tree structure hai ye pura dom, to ek div ke bad enter (line break) dia vo bhi ek node hai 
 
 </script>
 </html>
