--- a/07_projects/index.html
+++ b/07_projects/index.html
@@ -18,7 +18,7 @@
         <a class="project-link" style="" href="./01_colorChanger/index.html"
           >Project One - color Changer 🔥</a
         >
-        <a class="project-link" href="./2-BMICalculator/index.html"
+        <a class="project-link" href="./02_BMICalculator/index.html"
           >Project Two - BMI Generator ☕️</a
         >
         <a class="project-link" href="./3-DigitalClock/index.html"
