--- a/07_projects/index.html
+++ b/07_projects/index.html
@@ -21,7 +21,7 @@
         <a class="project-link" href="./02_BMICalculator/index.html"
           >Project Two - BMI Generator ☕️</a
         >
-        <a class="project-link" href="./3-DigitalClock/index.html"
+        <a class="project-link" href="./03_DigitalClock/index.html"
           >Project Three - Digital clock 😎</a
         >
         <a class="project-link" href="./4-GuessTheNumber/index.html"
