--- a/07_projects/index.html
+++ b/07_projects/index.html
@@ -24,7 +24,7 @@
         <a class="project-link" href="./03_DigitalClock/index.html"
           >Project Three - Digital clock 😎</a
         >
-        <a class="project-link" href="./4-GuessTheNumber/index.html"
+        <a class="project-link" href="./04_GuessTheNumber/index.html"
           >Project Four - Guess the number 🤨</a
         >
         <a class="project-link" href="./5-keyboard/index.html"
