--- a/07_projects/index.html
+++ b/07_projects/index.html
@@ -13,7 +13,7 @@
       <a href="/" aria-current="page">Home</a>
     </nav>
     <main>
-      <h1>Chai aur JavaScript/h1>
+      <h1>Chai aur JavaScript</h1>
       <div class="projects">
         <a class="project-link" style="" href="./01_colorChanger/index.html"
           >Project One - color Changer 🔥</a
