--- a/07_projects/index.html
+++ b/07_projects/index.html
@@ -30,7 +30,7 @@
         <a class="project-link"  href="./05_unlimitedColors/index.html"
           >Project 5 - Unlimited Colors 🧠</a
         >
-        <a class="project-link" href="./06_keyboard/index.html"
+        <a class="project-link" href="./06_keyboardKeyChecker/index.html"
           >Project 6 - Keyboard check 👻</a
         >
       </div>
