--- a/07_projects/index.html
+++ b/07_projects/index.html
@@ -16,16 +16,16 @@
       <h1>Basic JS Fundamentals Projects</h1>
       <div class="projects">
         <a class="project-link" style="" href="./01_colorChanger/index.html"
-          >Project One - color Changer 🔥</a
+          >Project 1 - color Changer 🔥</a
         >
         <a class="project-link" href="./02_BMICalculator/index.html"
-          >Project Two - BMI Generator ☕️</a
+          >Project 2 - BMI Generator ☕️</a
         >
         <a class="project-link" href="./03_DigitalClock/index.html"
-          >Project Three - Digital clock 😎</a
+          >Project 3 - Digital clock 😎</a
         >
         <a class="project-link" href="./04_GuessTheNumber/index.html"
-          >Project Four - Guess the number 🤨</a
+          >Project 4 - Guess the number 🤨</a
         >
         <a class="project-link"  href="./05_unlimitedColors/index.html"
           >Project 5 - Unlimited Colors 🧠</a
