--- a/07_projects/index.html
+++ b/07_projects/index.html
@@ -16,7 +16,7 @@
       <h1>Basic JS Fundamentals Projects</h1>
       <div class="projects">
         <a class="project-link" style="" href="./01_colorChanger/index.html"
-          >Project 1 - color Changer 🔥</a
+          >Project 1 - Color Changer 🔥</a
         >
         <a class="project-link" href="./02_BMICalculator/index.html"
           >Project 2 - BMI Generator ☕️</a
